src/objects/Applications__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <formula>IF( NOT( ISBLANK(DOB__c) ) , 
IF( DATE( 2000 , MONTH( DOB__c ) , DAY( DOB__c ) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ), 
YEAR (Today()) - YEAR (DOB__c), 
YEAR (Today()) - YEAR ( DOB__c ) -1 ), 
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agency_Contact_Email__c</fullName>
        <label>Agency Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Agency_Contact_Name__c</fullName>
        <label>Agency Contact Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_Contact_Phone__c</fullName>
        <label>Agency Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Agency_List__c</fullName>
        <label>Agency List</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Did_anyone_helped_you_to_submit_the_info__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Alliance For African Assistance</fullName>
                </value>
                <value>
                    <fullName>Alpha Project For The Homeless</fullName>
                </value>
                <value>
                    <fullName>Campesinos Unidos Inc</fullName>
                </value>
                <value>
                    <fullName>Catholic Charities – Diocese of San Diego</fullName>
                </value>
                <value>
                    <fullName>Center For Community Solutions</fullName>
                </value>
                <value>
                    <fullName>Chicano Federation-San Diego</fullName>
                </value>
                <value>
                    <fullName>Community Foundation of San Diego</fullName>
                </value>
                <value>
                    <fullName>Downtown Safe Haven</fullName>
                </value>
                <value>
                    <fullName>Episcopal Community Services</fullName>
                </value>
                <value>
                    <fullName>Ethiopian Community Of San Diego</fullName>
                </value>
                <value>
                    <fullName>Home Start</fullName>
                </value>
                <value>
                    <fullName>Jewish Family Service of San Diego</fullName>
                </value>
                <value>
                    <fullName>Lutheran Social Service of Southern California-San Diego County</fullName>
                </value>
                <value>
                    <fullName>Mental Health Systems Inc</fullName>
                </value>
                <value>
                    <fullName>Neighborhood House Association</fullName>
                </value>
                <value>
                    <fullName>San Diego Center for Blind and Vision Impaired</fullName>
                </value>
                <value>
                    <fullName>San Diego Regional Center</fullName>
                </value>
                <value>
                    <fullName>San Diego Youth and Community Services</fullName>
                </value>
                <value>
                    <fullName>St Vincert De Paul Village</fullName>
                </value>
                <value>
                    <fullName>Access to Independence</fullName>
                </value>
                <value>
                    <fullName>YMCA</fullName>
                </value>
                <value>
                    <fullName>Department of Veterans Affairs</fullName>
                </value>
                <value>
                    <fullName>County of San Diego HHSA – Child Welfare Services</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>211</fullName>
                </value>
                <value>
                    <fullName>Campesinos Unidos Inc.</fullName>
                </value>
                <value>
                    <fullName>Mental Health Systems Inc.</fullName>
                </value>
                <value>
                    <fullName>San Diego Housing Commission</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>American_Indian__c</fullName>
        <defaultValue>false</defaultValue>
        <label>American Indian</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applicant__c</fullName>
        <label>Applicant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Applications_WL_00000001</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Application_HMY__c</fullName>
        <label>Application HMY</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Status__c</fullName>
        <label>Application Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Saved</fullName>
                </value>
                <value>
                    <fullName>Update Required</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Removed</fullName>
                </value>
                <value>
                    <fullName>Leased</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>On List</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Applied_Date_Time_With_Seconds__c</fullName>
        <label>Applied Date Time</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applied_Date_time__c</fullName>
        <description>Applied Date/time on Application to map to Yardi Applied Date</description>
        <inlineHelpText>Applied Date/time</inlineHelpText>
        <label>Applied Date/time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Are_you_in_Active_duty_with_US_Army__c</fullName>
        <label>Are you in active duty with US military</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_you_or_your_spouse_co_head_disabled__c</fullName>
        <label>Are you or your spouse/co-head disabled</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_you_veteran_or_a_family_of_a_ventera__c</fullName>
        <label>Are you veteran or a family of veteran</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Asian__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Asian</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Black__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Black</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Boomi_Is_Processing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag is set by Boomi after picking up a record that had the Send To Boomi checkbox set.  It indicates that Boomi has picked up the record and is attempting to send the data to YARDI.</description>
        <inlineHelpText>This flag is set by Boomi when it is processing a record.</inlineHelpText>
        <label>Boomi Is Processing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Citizenship__c</fullName>
        <label>Citizenship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Eligible Citizen</fullName>
                </value>
                <value>
                    <fullName>Eligible Non - Citizen</fullName>
                </value>
                <value>
                    <fullName>Ineligible Non-Citizen</fullName>
                </value>
                <value>
                    <fullName>Pending Verification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Last_Modified_By__c</fullName>
        <label>Contact Last Modified By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>Applicant__r.FirstName  &amp;  &apos;,&apos;  &amp;  Applicant__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dependents_Children_under_age_of_18__c</fullName>
        <label>Dependents/Children under age of 18</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Did_anyone_helped_you_to_submit_the_info__c</fullName>
        <label>Did anyone helped you to submit the info</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disabled_Family__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Displaced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Displaced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High School</fullName>
                </value>
                <value>
                    <fullName>Masters</fullName>
                </value>
                <value>
                    <fullName>No formal education</fullName>
                </value>
                <value>
                    <fullName>Primary education</fullName>
                </value>
                <value>
                    <fullName>Secondary education</fullName>
                </value>
                <value>
                    <fullName>GED</fullName>
                </value>
                <value>
                    <fullName>Vocational qualification</fullName>
                </value>
                <value>
                    <fullName>Doctorate or higher</fullName>
                </value>
                <value>
                    <fullName>Bachelors</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Some college</fullName>
                </value>
                <value>
                    <fullName>Middle School</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Elderly_Family__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Elderly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Elderly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Elderly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employment_Zip_Code__c</fullName>
        <label>Employment Zip Code</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enter_Agency_name_if_selected_other__c</fullName>
        <label>Enter Agency name if selected other</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hispanic or Latino</fullName>
                </value>
                <value>
                    <fullName>Not Hispanic or Latino</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Family_Annual_Income__c</fullName>
        <label>Family Annual Income</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Family__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Family</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>Spouse First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HH_Race__c</fullName>
        <formula>IF(AND(Black__c ,White__c ,Pacific_Islander__c,American_Indian__c,Asian__c), &quot;White;Black;Pacific Islander;AmericanIndian;Asian;&quot;, 
IF(AND(White__c ,Pacific_Islander__c,American_Indian__c,Asian__c), &quot;White;Pacific Islander;AmericanIndian;Asian&quot;,
IF(AND(Black__c ,Pacific_Islander__c,American_Indian__c,Asian__c), &quot;Black;Pacific Islander;AmericanIndian;Asian&quot;, 
IF(AND(Black__c ,White__c ,American_Indian__c,Asian__c), &quot;White,Black;AmericanIndian;Asian&quot;, 
IF(AND(Black__c ,White__c ,Pacific_Islander__c,Asian__c), &quot;White,Black;Pacific Islander;Asian&quot;, 
IF(AND(Black__c ,White__c ,Pacific_Islander__c,American_Indian__c), &quot;White,Black;Pacific Islander;AmericanIndian&quot;, 
IF(AND(White__c,Black__c ,Pacific_Islander__c), &quot;White;Black;Pacific Islander&quot;,
IF(AND(White__c,Black__c ,American_Indian__c), &quot;White;Black;American Indian&quot;, 
IF(AND(White__c,Black__c ,Asian__c), &quot;White;Black;Asian&quot;,
IF(AND(Black__c ,Pacific_Islander__c,American_Indian__c), &quot;Black;Pacific Islander;American Indian&quot;,
IF(AND(Black__c ,Pacific_Islander__c,Asian__c), &quot;Black;Pacific Islander;Asian&quot;,
IF(AND(Pacific_Islander__c ,American_Indian__c,Asian__c), &quot;Pacific Islander;American Indian;Asian&quot;,
IF(AND(Pacific_Islander__c ,Asian__c,White__c), &quot;Pacific Islander;Asian;White&quot;,
IF(AND(American_Indian__c,Asian__c,White__c), &quot;American Indian;Asian;White&quot;,
IF(AND(American_Indian__c,Asian__c,Black__c), &quot;American Indian;Asian;Black&quot;,
IF(AND(Asian__c,White__c,Black__c), &quot;Asian;White;Black&quot;,
IF(AND(Asian__c,Pacific_Islander__c,White__c), &quot;Asian;PacificIslander;White&quot;,
IF(AND(White__c ,Black__c ), &quot;White;Black&quot;,
IF(AND(White__c ,Pacific_Islander__c ), &quot;White;Pacific Islander&quot;,
IF(AND(White__c ,American_Indian__c ), &quot;White;merican Indian&quot;,
IF(AND(White__c ,Asian__c ), &quot;White;Asian&quot;,
IF(AND(Black__c ,Pacific_Islander__c ), &quot;Black;Pacific Islander&quot;,
IF(AND(Black__c ,American_Indian__c ), &quot;Black;American Indian&quot;,
IF(AND(Black__c ,Asian__c ), &quot;Black;Asian&quot;,
IF(AND(Pacific_Islander__c ,American_Indian__c ), &quot;Pacific Islander;American Indian&quot;,
IF(AND(Pacific_Islander__c ,Asian__c ), &quot;Pacific Islander;Asian&quot;,
IF(AND(American_Indian__c ,Asian__c ), &quot;American Indian;Asian&quot;,
IF(AND(Black__c ), &quot;Black&quot;,
IF(AND(White__c ), &quot;White&quot;,
IF(AND(Pacific_Islander__c ), &quot;Pacific Islander&quot;,
IF(AND(American_Indian__c ), &quot;American Indian&quot;,
IF(AND(Asian__c ), &quot;Asian&quot;, &apos;&apos;))))))))))))))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HH Race</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HH_Stats__c</fullName>
        <formula>IF(AND(Near_Elderly__c ,Disable__c ,Elderly__c,Displaced__c,Homeless__c), &quot;D;NE;E;Disp;H&quot;, 
IF(AND(Disable__c ,Elderly__c,Displaced__c,Homeless__c), &quot;D;E;Disp;H&quot;, 
IF(AND(Near_Elderly__c ,Elderly__c,Displaced__c,Homeless__c), &quot;NE;E;Disp;H&quot;, 
IF(AND(Near_Elderly__c ,Disable__c ,Displaced__c,Homeless__c), &quot;D;NE;Disp;H&quot;, 
IF(AND(Near_Elderly__c ,Disable__c ,Elderly__c,Homeless__c), &quot;D;NE;E;H&quot;, 
IF(AND(Near_Elderly__c ,Disable__c ,Elderly__c,Displaced__c), &quot;D;NE;E;Disp&quot;, 
IF(AND(Disable__c,Near_Elderly__c ,Elderly__c), &quot;D;NE;E&quot;, 
IF(AND(Disable__c,Near_Elderly__c ,Displaced__c), &quot;D;NE;Disp&quot;, 
IF(AND(Disable__c,Near_Elderly__c ,Homeless__c), &quot;D;NE;H&quot;, 
IF(AND(Near_Elderly__c ,Elderly__c,Displaced__c), &quot;NE;E;Disp&quot;, 
IF(AND(Near_Elderly__c ,Elderly__c,Homeless__c), &quot;NE;E;H&quot;, 
IF(AND(Elderly__c ,Displaced__c,Homeless__c), &quot;E;Disp;H&quot;, 
IF(AND(Elderly__c ,Homeless__c,Disable__c), &quot;E;H;D&quot;, 
IF(AND(Displaced__c,Homeless__c,Disable__c), &quot;Disp;H;D&quot;, 
IF(AND(Displaced__c,Homeless__c,Near_Elderly__c), &quot;Disp;H;NE&quot;, 
IF(AND(Homeless__c,Disable__c,Near_Elderly__c), &quot;H;D;NE&quot;, 
IF(AND(Homeless__c,Elderly__c,Disable__c), &quot;H;E;D&quot;, 
IF(AND(Disable__c ,Near_Elderly__c ), &quot;D;NE&quot;, 
IF(AND(Disable__c ,Elderly__c ), &quot;D;E&quot;, 
IF(AND(Disable__c ,Displaced__c ), &quot;D;Disp&quot;, 
IF(AND(Disable__c ,Homeless__c ), &quot;D;H&quot;, 
IF(AND(Near_Elderly__c ,Elderly__c ), &quot;NE;E&quot;, 
IF(AND(Near_Elderly__c ,Displaced__c ), &quot;NE;Disp&quot;, 
IF(AND(Near_Elderly__c ,Homeless__c ), &quot;NE;H&quot;, 
IF(AND(Elderly__c ,Displaced__c ), &quot;E;Disp&quot;, 
IF(AND(Elderly__c ,Homeless__c ), &quot;E;H&quot;, 
IF(AND(Displaced__c ,Homeless__c ), &quot;Disp;H&quot;, 
IF(AND(Near_Elderly__c ), &quot;NE&quot;, 
IF(AND(Disable__c ), &quot;D&quot;, 
IF(AND(Elderly__c ), &quot;E&quot;, 
IF(AND(Displaced__c ), &quot;Disp&quot;, 
IF(AND(Homeless__c ), &quot;H&quot;, &apos;&apos;))))))))))))))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HH Stats</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HMY__c</fullName>
        <label>Contact HMY</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hearing_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hearing Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Homeless__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Homeless</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Homeless_with_disability__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Homeless with disability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Spouse Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Live_Work_in_City_of_San_Diego__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Applicant lives or works within the City of San Diego</description>
        <label>Live/Work in City of San Diego</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobility_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobility Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ModRehab_value__c</fullName>
        <formula>IF(Mod_Rehab__c==True, &quot;Mod Rehab&quot;, &quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ModRehab value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mod_Rehab__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Wait List for Mod Rehab</inlineHelpText>
        <label>Mod Rehab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NED_Non_Elderly_Person_with_Disability__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NED-Non Elderly Person with Disability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NED_Non_Elderly_Person_with_Disability_v__c</fullName>
        <formula>IF(NED_Non_Elderly_Person_with_Disability__c==True, &quot;NED-Non Elderly Person with Disability&quot;, &quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NED-Non Elderly Person with Disability v</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Near_Elderly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Near Elderly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_Elderly_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non Elderly Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <label>Occupation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Architecture and Engineering</fullName>
                </value>
                <value>
                    <fullName>Unemployed</fullName>
                </value>
                <value>
                    <fullName>Arts Design Entertainment Sports and Media</fullName>
                </value>
                <value>
                    <fullName>Building Grounds Cleaning and Maintenance</fullName>
                </value>
                <value>
                    <fullName>Business and Financial Operations</fullName>
                </value>
                <value>
                    <fullName>Community and Social Service</fullName>
                </value>
                <value>
                    <fullName>Computer and Mathematical</fullName>
                </value>
                <value>
                    <fullName>Construction and Extraction</fullName>
                </value>
                <value>
                    <fullName>Education Training and Library</fullName>
                </value>
                <value>
                    <fullName>Farming Fishing and Forestry</fullName>
                </value>
                <value>
                    <fullName>Food Preparation and Serving</fullName>
                </value>
                <value>
                    <fullName>Healthcare Practitioners and Technical</fullName>
                </value>
                <value>
                    <fullName>Healthcare Support</fullName>
                </value>
                <value>
                    <fullName>Installation Maintenance and Repair</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Life or Physical or Social Science</fullName>
                </value>
                <value>
                    <fullName>Management</fullName>
                </value>
                <value>
                    <fullName>Military Specific</fullName>
                </value>
                <value>
                    <fullName>Office and Administrative Support</fullName>
                </value>
                <value>
                    <fullName>Personal Care and Service</fullName>
                </value>
                <value>
                    <fullName>Production and Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Protective Service</fullName>
                </value>
                <value>
                    <fullName>Sales and Related</fullName>
                </value>
                <value>
                    <fullName>Transportation and Material Moving</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PBVS_Project_Based_Single__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PBS-Project Based Single</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PBVS_Project_Based_Single_value__c</fullName>
        <formula>IF(PBVS_Project_Based_Single__c==True, &quot;PBVS-Project Based Single&quot;, &quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PBS-Project Based Single value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PBV_Project_Based__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PBV-Project Based</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pacific_Islander__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pacific Islander</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Portal_Status__c</fullName>
        <label>Portal Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prospect_Name__c</fullName>
        <label>Prospect #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pseudo_SSN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pseudo SSN</label>
        <referenceTo>PSEUDO_SSN__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Public_Housing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Housing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RAD_Last_Update_Date__c</fullName>
        <description>When the applicant shows interest  for extension of purge</description>
        <label>Last Update Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RAD_Next_Purge_Date__c</fullName>
        <description>This is informational field, which will store the end date of Grace Period.</description>
        <label>Grace Period End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RAD_Next_Purge_Request_Date__c</fullName>
        <label>Next Update Request Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RAD_Spouse_Age__c</fullName>
        <formula>IF( NOT( ISBLANK(Spouse_Date_of_Birth__c) ) , 
IF( DATE( 2000 , MONTH( Spouse_Date_of_Birth__c) , DAY( Spouse_Date_of_Birth__c) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ), 
YEAR (Today()) - YEAR (Spouse_Date_of_Birth__c), 
YEAR (Today()) - YEAR ( Spouse_Date_of_Birth__c) -1 ), 
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Spouse Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <label>Social Security Number1</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_8__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Section 8</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Section_8_value__c</fullName>
        <formula>IF(Section_8__c==True, &quot;The Section 8&quot;, &quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Section 8 value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_To_Boomi__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag is checked by Boomi to determine if a record is to be picked up and processed.</description>
        <inlineHelpText>If the box is checked, Boomi will pull the record on the next poll.  If the box is unchecked, Boomi will not pull the record.</inlineHelpText>
        <label>Send To Boomi</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sight_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sight Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Spouse_Co_Head_If_applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Spouse/Co-Head/If applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Spouse_Date_of_Birth__c</fullName>
        <label>Spouse Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Spouse_Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Spouse_SSN__c</fullName>
        <label>Spouse Social Security Number</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tenant__c</fullName>
        <label>Tenant #</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_People__c</fullName>
        <formula>of_people_in_the_H_H_Adults__c + Dependents_Children_under_age_of_18__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Number of People</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_People__c</fullName>
        <label>Total People</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Update_Confirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when Applicant&apos;s are interested to stay on Wait list. Related to Purge/Update Process</description>
        <label>Update Confirmation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_defined_2__c</fullName>
        <label>User defined 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accessible Only</fullName>
                </value>
                <value>
                    <fullName>Needs Accessible, but will accept Flat</fullName>
                </value>
                <value>
                    <fullName>Needs Accessible, but will accept any Apt</fullName>
                </value>
                <value>
                    <fullName>Needs Flat Only</fullName>
                </value>
                <value>
                    <fullName>Needs Flat, but will accept ant Apt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Veteran_Family_of__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Applicant is from a veteran / active military or family of veterans</description>
        <label>Veteran / Active Military</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>